[package]
name = "elemental-deck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
derive_more = "0.99.17"
fp-core = "0.1.9"
rand = "0.8.5"
strum = { version = "0.26.2", features = ["derive"] }

